src/background/css/list.styl
/* Template List styles
  */

/* List group item
 */
.list-group-item {
    position: relative;
    display: block;
    overflow: hidden;
    border-radius: 0 !important;

    .hover-actions {
        display: block;
        position: absolute;
        top: 50%;
        right: emCalc(12);
        transform: translateY(-50%);
        min-width: 200px;
        text-align: right;

        button
        .btn {
            display: inline-block;
            margin-left: 10px;

            transition: all .1s ease-out;
            opacity: 0;

            &:focus {
                opacity: 1;
            }
        }
    }

    .list-group-item-link:focus ~ .hover-actions,
    &:hover .hover-actions {
        .btn,
        button {
            opacity: 1;
        }
    }

    &.active {
        background: lighten($color1, 90%);
    }
}

.checkbox-wrapper {
    padding: 0.8em 0 0 0.4em;
    float: left;
    label {
        cursor: pointer;
    }
}

.btn-toolbar {
    .btn.pull-right, .btn-group.pull-right {
        margin-left: 10px;
    }
}

.quicktexts-list {

    .label-wrapper {
        margin: 4px 2px;
        display: inline-block;
    }

    .list-group-item {
        padding: 0;

        .list-group-item-link {
            display: block;
            padding: emCalc(12) emCalc(16);
            cursor: pointer;

            color: $black;

            &:hover {
                text-decoration: none;
            }

            &:focus {
                background: lighten($color1, 90%);
            }
        }

        &:hover {
            background-color: $grey1;
        }
        .private-icon {
            color: #555;
        }
    }

    .quicktext-detail {
        margin-bottom: emCalc(8);

        strong {
            font-weight: normal;
            font-size: emCalc(12);
            color: rgba($black, 50%);
            text-transform: uppercase;
            letter-spacing: 1px;
        }

        .quicktext-template {
            display: block;
        }

        p {
            margin: 0;
        }

    }

    .quicktext-shortcut {
        padding-top: 8px;
        span {
            font-size: 16px;
            padding: .25em .5em;
            border: 1px solid #CCC;
            background-color: #F2F2F2;
            -webkit-border-radius: 5px;
            border-radius: 5px;
            -webkit-box-shadow: 0 2px 2px #F2F2F2;
            box-shadow: 0 2px 2px #F2F2F2;
        }
    }
}

.template-list-empty {
    padding: 12px;
}

.quicktext-filters {
    padding-top: 16px;
    padding-bottom: 5px;
    line-height: 21px;
}

.selectize-dropdown-content {
    .label {
        color: black;
    }
}

.selectize-dropdown-content [data-selectable] {
    padding: 3px 12px;
}

/* new/edit modal
*/
.modal.in .modal-dialog {
    width: 610px;
}
.editor-wrapper .qt-body-no-html {
    min-height: 190px !important;
    width: 100% !important;
}
.quicktext-modal {
    .modal-main {
        display: flex;
        justify-content center;
        width: 100vw;
        height: 100vh;

        .modal-dialog {

            .modal-footer {

                .premium-feature {
                    text-align: left;
                }

                .footer-button {
                    display: flex;
                    justify-content: space-between;
                }
            }
            .modal-content {
                display: flex;
                flex-direction: column;
                min-height: 600px;
                .ng-pristine {
                    flex: 1;
                    display: flex;
                    flex-direction: column;

                    .modal-body {
                        flex: 1;
                        display: flex;
                        flex-direction: column;

                        #tinymce {
                            padding-bottom: 0!important;
                        }

                        .form-template-content {
                            flex: 1;
                            display: flex;
                            flex-direction: column;

                            .editor-wrapper {
                                flex: 1;
                                display: flex;
                                flex-direction: column;

                                .mce-tinymce {
                                    flex: 1;
                                    display: flex;
                                    flex-direction: column;

                                    .mce-container-body {
                                        flex: 1;
                                        display: flex;
                                        flex-direction: column;

                                        .mce-toolbar-grp .mce-container-body {
                                            display: block;
                                        }

                                        .mce-edit-area {
                                            flex: 1;
                                            display: flex;
                                            flex-direction: column;
                                        }

                                    }
                                }
                            }
                        }
                    }
                }
            }
            .modal-footer .btn + .btn {
                margin-bottom: 0.25em;
                margin-left: 5px;
            }
            .configure-fields {
                padding-top: 2px;
                margin-right: 8px;
                .dropdown-menu {
                    padding: 8px;
                }
            }
            .modal-title {
                font-weight: bold;
                font-size: 1.8em;
            }

        }
    }
}

/* Share modal */
.share-user-list {
    list-style-type: none;
    padding-left: 10px;
}

.share-row {
    margin-top: 10px;

    .margin-top-10 {
        margin-top: 10px;
    }
}

/* flexible grid for extra fields in quicktext form
 */
.form-group-grid {
    display: flex;
}

.form-group-grid .form-group {
    flex: 1;
}

.form-group-grid .form-group:not(:last-child) {
    margin-right: 15px;
}

/* inline email notification checkbox
 */
.template-share-notify input {
    display: inline !important;
}

/* attachments
 */
.attachment-selector {
    position: relative;
    display: inline-block;
    margin-top: .6em;

    color: #15c;
}

.attachment-status-uploading .attachment-icon-idle,
.attachment-selector .attachment-icon-uploading {
    display: none;
}

.attachment-status-uploading .attachment-icon-uploading {
    display: inline-block;
}

.attachment-selector .fa {
    font-size: 1.2em;
}

.attachment-selector input {
    position: absolute;
    opacity: 0;
    top: 0;
}

.attachment-selector label {
    position: relative;
    z-index: 1;
    padding: .4em 0;

    font-weight: normal;
    cursor: pointer;
}

.attachment-selector label:hover span {
    text-decoration: underline;
}

.attachment-status-uploading label:hover span {
    text-decoration: none;
}

.attachment-status-uploading label {
    cursor: wait;
    color: #888;
}

